--- a/frontend/src/components/paymentGateway/Payment.css
+++ b/frontend/src/components/paymentGateway/Payment.css
@@ -82,6 +82,10 @@
     text-align: center;
     margin-top: 0px;
   }
+
+  p{
+    color: #D90429;
+  }
   
   form{
     border: 2px solid rgb(255, 255, 255);
