--- a/frontend/src/components/cart/ViewCart.css
+++ b/frontend/src/components/cart/ViewCart.css
@@ -47,9 +47,23 @@
 
   .button, .button:hover {
     background-color: #d90429 !important;
+    border-color: #d90429 !important;
+    text-decoration: none !important;;
+  }
+
+  .link {
+    text-decoration: none;
+  }
+
+  .button-black, .button-black:hover {
+    background-color: #282c34 !important;
+    border-color:  #282c34 !important;
   }
 
 
+  .outline :hover{
+    color: #282c34
+  }
   
   .btn-dark {
     background-color: #2b2d42 !important;
